// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compact headings can parse compact headings 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "indent": Array [],
            "start": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
          },
          "type": "text",
          "value": "Compact Heading",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 1,
          "line": 2,
          "offset": 17,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 3,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Compact headings can parse headings that are not compact 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Non-compact Heading",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 3,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
